--- a/httpdns_ios_demo/httpdns_ios_demo/Base.lproj/Main.storyboard
+++ b/httpdns_ios_demo/httpdns_ios_demo/Base.lproj/Main.storyboard
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="GtF-LO-C51">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1108" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="GtF-LO-C51">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--httpdns_ios_demo-->
@@ -14,11 +18,11 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X9w-dC-Exa">
-                                <rect key="frame" x="261" y="90" width="78" height="30"/>
+                                <rect key="frame" x="148" y="90" width="78" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="78" id="5ni-5a-Uba"/>
                                     <constraint firstAttribute="height" constant="30" id="GLh-e0-Q0W"/>
@@ -29,7 +33,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zfr-ao-TNx">
-                                <rect key="frame" x="255" y="163" width="91" height="30"/>
+                                <rect key="frame" x="142" y="163" width="91" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="91" id="QqF-Sd-fxx"/>
                                     <constraint firstAttribute="height" constant="30" id="j2z-AQ-4hy"/>
@@ -40,7 +44,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xNf-ed-e74">
-                                <rect key="frame" x="255" y="250" width="91" height="30"/>
+                                <rect key="frame" x="142" y="250" width="91" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="20B-qc-oP7"/>
                                     <constraint firstAttribute="width" constant="91" id="FSx-r0-laF"/>
@@ -51,7 +55,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KqP-X5-TOM">
-                                <rect key="frame" x="250" y="327" width="100" height="30"/>
+                                <rect key="frame" x="137" y="327" width="100" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="4AZ-cA-TaM"/>
                                     <constraint firstAttribute="height" constant="30" id="HyW-DU-oY5"/>
@@ -62,7 +66,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="X9w-dC-Exa" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="26" id="60m-J3-52b"/>
                             <constraint firstItem="xNf-ed-e74" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="186" id="GTy-cc-AQ6"/>
@@ -89,9 +93,9 @@
                         <viewControllerLayoutGuide type="bottom" id="Ksu-rt-iae"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="VZl-Fe-gxf">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <navigationItem key="navigationItem" title="HTTPS场景" id="0a7-nH-be9"/>
                 </viewController>
@@ -108,15 +112,30 @@
                         <viewControllerLayoutGuide type="bottom" id="Ect-Ht-6sy"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="9WC-bO-7vp">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="85F-ie-jzu">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="85F-ie-jzu" firstAttribute="top" secondItem="9WC-bO-7vp" secondAttribute="top" id="fYC-Fb-Mca"/>
+                            <constraint firstItem="85F-ie-jzu" firstAttribute="leading" secondItem="9WC-bO-7vp" secondAttribute="leading" id="q3x-LX-Du3"/>
+                            <constraint firstAttribute="trailing" secondItem="85F-ie-jzu" secondAttribute="trailing" id="rR4-AN-bQQ"/>
+                            <constraint firstItem="85F-ie-jzu" firstAttribute="bottom" secondItem="Ect-Ht-6sy" secondAttribute="top" id="v0A-Sq-3L9"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="SNI场景" id="TVK-f6-M91"/>
+                    <connections>
+                        <outlet property="webView" destination="85F-ie-jzu" id="IF0-kO-w1P"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="z8n-H4-4Uj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1852" y="658"/>
+            <point key="canvasLocation" x="1852" y="657.12143928035982"/>
         </scene>
         <!--WebView场景-->
         <scene sceneID="Ijt-lZ-ooY">
@@ -127,9 +146,9 @@
                         <viewControllerLayoutGuide type="bottom" id="mNF-00-sgE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="ydw-aG-jDn">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <navigationItem key="navigationItem" title="WebView场景" id="E7i-az-mKZ"/>
                 </viewController>
@@ -146,9 +165,9 @@
                         <viewControllerLayoutGuide type="bottom" id="Lnt-Ms-3oE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="LmJ-lV-GCo">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <navigationItem key="navigationItem" title="普通场景" id="8bQ-7w-D0j"/>
                 </viewController>
